--- a/deployment/wwwroot/appsettings.json
+++ b/deployment/wwwroot/appsettings.json
@@ -1,11 +1,11 @@
 {
   "AzureAd": {
-    "Authority": "https://login.microsoftonline.com/206bad4c-d071-4c91-9181-ef7047e6590b",
-    "ClientId": "fcf72e46-0a43-48f6-86d5-e0969c146550",
+    "Authority": "https://login.microsoftonline.com/23821aef-57f4-408e-b631-88a036c1114e",
+    "ClientId": "acdc9002-9295-4ef2-9d03-476b0faa90ac",
     "ValidateAuthority": true
   },
   "UrlShortenerSecuredService": {
-    "Endpoint": "https://tinyadminhmxyp.azurewebsites.net/"
+    "Endpoint": "https://tinybackend5f2sl.azurewebsites.net/"
   }
 }
 
