--- a/src/TinyBlazorAdmin/wwwroot/appsettings.json
+++ b/src/TinyBlazorAdmin/wwwroot/appsettings.json
@@ -1,11 +1,10 @@
 {
   "AzureAd": {
-    "Authority": "https://login.microsoftonline.com/206bad4c-d071-4c91-9181-ef7047e6590b",
-    "ClientId": "028a6b27-da73-462d-b4d9-70e6c1bbca70",
+    "Authority": "https://login.microsoftonline.com/23821aef-57f4-408e-b631-88a036c1114e",
+    "ClientId": "acdc9002-9295-4ef2-9d03-476b0faa90ac",
     "ValidateAuthority": true
   },
   "UrlShortenerSecuredService": {
-    "Endpoint": "https://swatestv2llx63.azurewebsites.net/"
+    "Endpoint": "https://tinybackend5f2sl.azurewebsites.net/"
   }
 }
-
